--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "install:dev": "npm install convict reflect-metadata js-yaml --no-save",
-    "test": "NODE_PATH=src/ TS_NODE_FILES=true nyc mocha --opts mocha.opts src/test/**/*.test.ts",
+    "test": "NODE_PATH=src/ TS_NODE_FILES=true NODE_OPTIONS='-r reflect-metadata' nyc mocha --opts mocha.opts src/test/**/*.test.ts",
     "debug": "NODE_ENV=dev node --inspect-brk=9229 ./node_modules/.bin/ts-node --files -P tsconfig.json src/test/debug.ts",
     "lint": "tslint -p tsconfig.json -c tslint.json -t verbose",
     "build": "NODE_PATH=src/ TS_NODE_FILES=true tsc",
@@ -51,6 +51,8 @@
     "source-map-support": "^0.5.12",
     "ts-node": "^5.0.1",
     "tslint": "^5.16.0",
-    "typescript": "^2.9.2"
+    "typescript": "^2.9.2",
+    "convict": "^5.0.0",
+    "reflect-metadata": "^0.1.13"
   }
 }
