--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "debug": "TS_NODE_FILES=true TS_NODE_PROJECT=tsconfig.json node -r reflect-metadata -r ts-node/register --inspect-brk=9229 src/test/debug.ts",
     "lint": "tslint -p tsconfig.json -c tslint.json -t verbose",
     "build": "NODE_PATH=src/ TS_NODE_FILES=true tsc",
-    "build:prod": "NODE_PATH=src/ TS_NODE_FILES=true tsc -p tsconfig.prod.json"
+    "build:prod": "TS_NODE_FILES=true tsc -p tsconfig.prod.json"
   },
   "peerDependencies": {
     "convict": "^5.0.0",
