--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Akirix/ts-convict.git"
+    "url": "https://github.com/kferrone/ts-convict.git"
   },
   "bugs": {
-    "url": "https://github.com/Akirix/ts-convict/issues"
+    "url": "https://github.com/kferrone/ts-convict/issues"
   },
-  "homepage": "https://github.com/Akirix/ts-convict",
+  "homepage": "https://github.com/kferrone/ts-convict",
   "engine": {
     "node": "^10.11.0"
   },
