--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "node": "^10.11.0"
   },
   "scripts": {
-    "install:dev": "npm install convict reflect-metadata js-yaml --no-save",
-    "test": "NODE_PATH=src/ TS_NODE_FILES=true NODE_OPTIONS='-r reflect-metadata' nyc mocha --opts mocha.opts src/test/**/*.test.ts",
+    "test": "NODE_PATH=src/ TS_NODE_FILES=true nyc mocha --opts mocha.opts src/test/**/*.test.ts",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "debug": "TS_NODE_FILES=true TS_NODE_PROJECT=tsconfig.json node -r reflect-metadata -r ts-node/register --inspect-brk=9229 src/test/debug.ts",
     "lint": "tslint -p tsconfig.json -c tslint.json -t verbose",
     "build": "NODE_PATH=src/ TS_NODE_FILES=true tsc",
-    "build:prod": "TS_NODE_FILES=true tsc -p tsconfig.prod.json"
+    "build:prod": "TS_NODE_FILES=true tsc -p tsconfig.prod.json",
+    "clean": "rm -rf node_modules dist public .nyc_output"
   },
   "peerDependencies": {
     "convict": "^5.0.0",
@@ -47,6 +48,7 @@
     "@types/node": "^9.6.48",
     "chai": "^4.2.0",
     "convict": "^5.0.0",
+    "coveralls": "^3.0.9",
     "js-yaml": "^3.13.1",
     "mocha": "^6.1.4",
     "mocha-typescript": "^1.1.17",
