--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,8 @@
     "traceResolution": false,
     "watch": false,
     "preserveWatchOutput": true,
-    "diagnostics": false,
-    "removeComments": true,
+    "diagnostics": true,
+    "removeComments": false,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
     "baseUrl": "src",
@@ -40,15 +40,5 @@
   },
   "include": [
     "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "deploy",
-    "dist",
-    "log",
-    "tmp",
-    ".settings",
-    "docs",
-    "config"
   ]
 }
