cleaned up the tests
much easier to test now

--- a/.nycrc.json
+++ b/.nycrc.json
@@ -11,6 +11,7 @@
     ],
     "require": [
         "reflect-metadata",
+        "source-map-support/register",
         "ts-node/register"
     ],
     "reporter": [
