--- a/package.json
+++ b/package.json
@@ -28,12 +28,11 @@
     "node": "^10.11.0"
   },
   "scripts": {
-    "test": "NODE_PATH=src/ TS_NODE_FILES=true nyc mocha --opts mocha.opts src/test/**/*.test.ts",
+    "test": "NODE_PATH=src TS_NODE_FILES=true nyc mocha --opts mocha.opts src/test/**/*.test.ts",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "debug": "TS_NODE_FILES=true TS_NODE_PROJECT=tsconfig.json node -r reflect-metadata -r ts-node/register --inspect-brk=9229 src/test/debug.ts",
     "lint": "tslint -p tsconfig.json -c tslint.json -t verbose",
-    "build": "NODE_PATH=src/ TS_NODE_FILES=true tsc",
-    "build:prod": "TS_NODE_FILES=true tsc -p tsconfig.prod.json",
+    "build": "TS_NODE_FILES=true tsc -p tsconfig.prod.json",
     "clean": "rm -rf node_modules dist public .nyc_output"
   },
   "peerDependencies": {
