--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "node": "^10.11.0"
   },
   "scripts": {
-    "test": "NODE_PATH=src/ TS_NODE_FILES=true nyc mocha --opts mocha.opts src/test/**/*.test.ts",
+    "test": "npm run mocha src/test/**/*.test.ts",
+    "mocha": "NODE_PATH=src/ TS_NODE_FILES=true nyc mocha --config .mocharc.json $*",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "debug": "TS_NODE_FILES=true TS_NODE_PROJECT=tsconfig.json node -r reflect-metadata -r ts-node/register --inspect-brk=9229 src/test/debug.ts",
     "lint": "tslint -p tsconfig.json -c tslint.json -t verbose",
@@ -37,26 +38,32 @@
     "clean": "rm -rf node_modules dist public .nyc_output"
   },
   "peerDependencies": {
-    "convict": "^5.0.0",
-    "reflect-metadata": "^0.1.13"
+    "convict": "*",
+    "reflect-metadata": "*"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.7",
-    "@types/convict": "^4.2.1",
-    "@types/js-yaml": "^3.12.1",
-    "@types/mocha": "^5.2.6",
-    "@types/node": "^9.6.48",
+    "@types/chai": "^4.2.14",
+    "@types/convict": "^5.2.2",
+    "@types/js-yaml": "^4.0.0",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.22",
     "chai": "^4.2.0",
-    "convict": "^5.0.0",
-    "coveralls": "^3.0.9",
-    "js-yaml": "^3.13.1",
-    "mocha": "^6.1.4",
-    "mocha-typescript": "^1.1.17",
-    "nyc": "^14.1.0",
+    "convict": "^6.0.0",
+    "coveralls": "^3.1.0",
+    "js-yaml": "4.0.0",
+    "mocha": "^8.2.1",
+    "@testdeck/mocha": "^0.1.2",
+    "nyc": "^15.1.0",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.12",
-    "ts-node": "^5.0.1",
-    "tslint": "^5.16.0",
-    "typescript": "^2.9.2"
+    "source-map-support": "^0.5.19",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0"
   }
 }
