--- a/package.json
+++ b/package.json
@@ -42,28 +42,30 @@
     "reflect-metadata": "*"
   },
   "devDependencies": {
+    "@testdeck/mocha": "^0.1.2",
     "@types/chai": "^4.2.14",
     "@types/convict": "^5.2.2",
+    "@types/convict-format-with-validator": "^6.0.1",
     "@types/js-yaml": "^4.0.0",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.22",
-    "chai": "^4.2.0",
-    "convict": "^6.0.0",
-    "coveralls": "^3.1.0",
-    "js-yaml": "4.0.0",
-    "mocha": "^8.2.1",
-    "@testdeck/mocha": "^0.1.2",
-    "nyc": "^15.1.0",
-    "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.19",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.5",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
+    "chai": "^4.2.0",
+    "convict": "^6.0.0",
+    "convict-format-with-validator": "^6.0.0",
+    "coveralls": "^3.1.0",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "js-yaml": "4.0.0",
+    "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
     "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0"
+    "pretty-quick": "^3.1.0",
+    "reflect-metadata": "^0.1.13",
+    "source-map-support": "^0.5.19",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5"
   }
 }
