--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "mocha": "NODE_PATH=src/ TS_NODE_FILES=true nyc mocha --config .mocharc.json $*",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "debug": "TS_NODE_FILES=true TS_NODE_PROJECT=tsconfig.json node -r reflect-metadata -r ts-node/register --inspect-brk=9229 src/test/debug.ts",
-    "lint": "tslint -p tsconfig.json -c tslint.json -t verbose",
+    "lint": "eslint --quiet 'src/**/*.ts'",
+    "prettier": "prettier --write \"src/**/*.ts\"",
     "build": "NODE_PATH=src/ TS_NODE_FILES=true tsc",
     "build:prod": "TS_NODE_FILES=true tsc -p tsconfig.prod.json",
     "clean": "rm -rf node_modules dist public .nyc_output"
