--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/convict": "^5.2.2",
     "@types/convict-format-with-validator": "^6.0.1",
     "@types/js-yaml": "^4.0.0",
+    "@types/lodash": "^4.14.172",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
@@ -68,5 +69,8 @@
     "source-map-support": "^0.5.19",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
